@@ -553,6 +553,8 @@ DeleteAnnotationAnchorByMark <- function(markname){
 openAnnotation <- function(New=TRUE,pos,fid,rowid,AnchorPos=NULL){
   tryCatch(dispose(.rqda$.annotation),error=function(e) {})
   .annotation <- gwindow(title="Annotation",parent=getOption("widgetCoordinate"),width=600,height=400)
+  mainIcon <- system.file("icon", "mainIcon.png", package = "RQDA")
+  .annotation@widget@widget$SetIconFromFile(mainIcon)
   assign(".annotation",.annotation, env=.rqda)
   .annotation2 <- gpanedgroup(horizontal = FALSE, con=.annotation)
   gbutton("Save Annotation",con=.annotation2,handler=function(h,...){
