@@ -1,3 +1,7 @@
+2010-02-23
+	* Various bugfixes: journal name with ' can be handled correctly.
+	* add icon to annotation widget.
+	
 2010-02-22
 	* Various bugfixes of code name with ' in coding Tab.
 	* Various bugfixes of code name with ' in code category Tab.
